--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react_ujs": "^2.6.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
